--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sinon-chai": "^2.8.0",
     "twitter-text": "^1.13.4",
     "webpack": "1.12.14",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
